--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,9 @@
 *.bin filter=lfs diff=lfs merge=lfs -text
 *.vox filter=lfs diff=lfs merge=lfs -text
 *.material filter=lfs diff=lfs merge=lfs -text
+*.PNG filter=lfs diff=lfs merge=lfs -text
+*.JPG filter=lfs diff=lfs merge=lfs -text
+*.WAV filter=lfs diff=lfs merge=lfs -text
+*.MP3 filter=lfs diff=lfs merge=lfs -text
+*.OGG filter=lfs diff=lfs merge=lfs -text
+*.JPEG filter=lfs diff=lfs merge=lfs -text
