models - revenant, rocks, dagger, mace, pitchfork, shovel, hammer_small

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,3 +21,4 @@
 *.MP3 filter=lfs diff=lfs merge=lfs -text
 *.OGG filter=lfs diff=lfs merge=lfs -text
 *.JPEG filter=lfs diff=lfs merge=lfs -text
+*.spp filter=lfs diff=lfs merge=lfs -text
