--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+
+# General
+*.log
+*.lock
+*.tmp
+*.DS_Store
+*Thumbs.db
+*.directory
+
+# Note - open issue, we want to avoid merging .blend and .spp etc large files into main...how?
